--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Velten Stoyann",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
