--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Velten Stoyann",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.0",
     "serve-favicon": "^2.5.0"
   },
