--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
+    "mariadb": "^3.0.0",
+    "sequelize": "^6.19.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
