--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Velten Stoyann",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
     "mariadb": "^3.0.0",
