--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
     "sequelize": "^6.19.0",
     "serve-favicon": "^2.5.0"
